--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			      </ul>
 			      <form class="navbar-form navbar-left" role="search">
 			        <div class="form-group">
-			          <input type="text" class="form-control" placeholder="Search">
+			          <input type="text" class="form-control ml30px" placeholder="Search">
 			        </div>
 			        <button type="submit" class="btn btn-default">Submit</button>
 			      </form>
