--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
 			      </ul>
 			      <form class="navbar-form navbar-left" role="search">
 			        <div class="form-group">
-			          <input type="text" class="form-control ml30px" placeholder="Search">
+			          <input type="text" class="form-control ml30px" placeholder="Email">
+			          <input type="text" class="form-control 200px" placeholder="Password">
 			        </div>
-			        <button type="submit" class="btn btn-default">Submit</button>
+			        <button type="submit" class="btn btn-default">Sign In</button>
 			      </form>
     			</div><!-- /.navbar-collapse -->
   			</div><!-- /.container-fluid -->
